<resources>
    <string name="app_name">百安胜</string>

    <!-- welcome activity -->
    <string name="app_statement">让吊篮管理更轻松</string>

    <!--扫码-->
    <string name="qr_name">二维码</string>
    <string name="i_know">我知道了</string>
    <string name="permission">抱歉,你的%1$s权限没有打开,无法正常服务
        \n请点击”设置”->在应用程序中找到”popon”->权限管理->%2$s->”允许”即可 </string>
    <string name="camera">摄像头(相机)</string>

    <!--  DeviceListActivity -->
    <string name="be_scanning">寻找设备...</string>
    <string name="select_device">选择一个设备去连接</string>
    <string name="none_paired">没有设备被请求</string>
    <string name="none_found">没有发现设备</string>
    <string name="title_paired_devices">可以连接的设备</string>
    <string name="title_other_devices">其他</string>
    <string name="button_scan">寻找设备</string>


    <!-- Strings related to loginPre -->
    <string name="dialog_register_fail">暂未开通区域管理员的注册功能！</string>

    <!-- Strings related to login -->
    <string name="prompt_username"> 手机号 </string>
    <string name="prompt_password"> 密  码</string>
    <string name="action_sign_in"> 登    录 </string>
    <string name="action_sign_in_manager">  管理员  </string>
    <string name="action_register">注    册</string>
    <string name="dialog_login_audit_fail">您的账号未通过审核，请重新注册！</string>
    <string name="dialog_login_audit">您的账号正在被审核，请稍后登录！</string>
    <string name="dialog_login_fail">账号或密码错误，请检查后登录！</string>
    <string name="login_title">登  录</string>

    <!-- Register activity-->
    <string name="registPre_title">注册-选择角色</string>
    <string name="registWorker_title">注册-施工人员</string>
    <string name="registRent_title">注册-租方管理员</string>
    <string name="registArea_title">注册-区域管理员</string>
    <string name="registInspector_title">注册-巡检人员</string>

    <string name="basic_info">基本信息</string>
    <string name="type_info">工种选择</string>
    <string name="pic_info">上传身份证照片（请保证照片清晰明亮）</string>
    <string name="pic_upNotice">请上传照片!</string>
    <string name="pic_successNotice">照片上传成功!</string>
    <string name="pic_failNotice">图片上传失败，请重新上传！</string>
    <string name="register_success">注册成功！请等待审核！</string>
    <string name="register_exist">注册失败，手机号已注册</string>
    <string name="register_back_fail">注册失败，服务器异常</string>


    <string name="password_change_hint_up">请先填写旧密码，后输入新密码并确认新密码</string>
    <string name="password_change_hint_down">密码必须至少6个字符，而且同时包含字母与数字。</string>
    <string name="password_change_old">请填写旧密码</string>
    <string name="password_change_new">请填写新的密码</string>
    <string name="password_change_new_again">请再次输入新密码</string>

    <!-- ManageMainActivity-->
    <string name="dialog_main_fail_login">您的登录状态已失效，请重新登录！</string>


    <!-- basketList activity -->
    <string name="basketList_title">吊篮列表</string>
    <!-- basketSticker activity-->
    <string name="basketSticker_title">吊篮平面图</string>

    <!-- basketList activity -->
    <string name="workerList_tile">施工人员列表</string>
    <!-- projectList activity -->
    <string name="projectList_title">项目列表</string>

    <!-- basketDetail activity -->
    <string name="basketDetail_tile">吊篮详情</string>

    <!-- projectDetail activity -->
    <string name="projectDetail_tile">项目详情</string>
    <!-- ProCommit activity-->
    <string name="proCommit_tile">项目验收申请</string>
    <string name="proCommit_describe">请输入项目描述...</string>

    <!-- configuration activity-->
    <string name="sixMeter_Num">六米吊篮</string>


    <!-- parameter activity -->
    <string name="parameter_title">设备参数</string>
    <string name="var_switch">开关变量</string>
    <string name="control_input">控制输入</string>
    <string name="parameter_motor">电机（1、2）</string>
    <string name="control_out">控制输出</string>
    <string name="parameter_vfd">变频器</string>
    <string name="parameter_contactor">接触器（左、右）</string>
    <string name="basket_data">传感器数据</string>
    <string name="parameter_weight">称重</string>
    <string name="parameter_vfd_current">变频器电流</string>
    <string name="parameter_clinometer_degree">倾斜仪角度（水平、竖直）</string>
    <string name="other_data">其他数据</string>
    <string name="parameter_location">位置</string>
    <string name="parameter_date">时间</string>

    <!-- workphoto activity -->
    <string name="work_photo_title">设备截图</string>
    <!-- video monitor activity -->
    <string name="video_buffering">正在缓冲</string>
    <!-- settle activity -->
    <string name="settle_title">设置参数</string>
    <string name="overweight_current">超载电流</string>
    <string name="angel_upperLimit">倾斜角上限位</string>
    <string name="angel_lowerLimit">倾斜角下限位</string>
    <string name="interval_snapshot">截图时间间隔</string>

    <!-- device activity -->
    <string name="device_activity_title">设备绑定详情</string>
    <string name="device_name">名称</string>
    <string name="device_number">编号</string>
    <string name="device_1">安全锁</string>
    <string name="device_2">提升机</string>
    <string name="device_3">配电柜</string>
    <string name="device_4">标识标牌</string>

    <!-- history info activity -->
    <string name="history_info_title">查看安监证书</string>

    <!-- repair activity -->
    <string name="fix_describe">请输入报修情況描述...</string>

    <!-- Info fragment -->
    <string name="info_noMessage">暂无消息</string>
    <string name="info_title">消息列表</string>

    <!-- user fragment-->
    <string name="user_frag_role_name">职位：</string>

    <!-- basketDetail activity -->
    <string name="basketId_hint">吊篮编号</string>
    <string name="workerName_hint">负责人姓名</string>

    <!-- worker primary activity -->
    <string name="user_type">区域管理员</string>
    <string name="worker_project_state">项目：</string>
    <string name="worker_no_project">无项目</string>
    <string name="worker_start_basket">上工</string>
    <string name="worker_operate_basket">上下工</string>
    <string name="worker_stop_basket">下工</string>
    <string name="worker_message">消息</string>
    <string name="worker_order">工单</string>
    <string name="worker_warning">报警</string>
    <string name="comment_and_feedback">联系与反馈</string>
    <string name="setting">设置</string>
    <!-- capture activity -->
    <string name="scanning">扫一扫</string>
    <!-- dialog_verify_action -->
    <string name="input_operate_password">请输入操作密码</string>
    <string name="input_finger_print">请验证指纹</string>
    <string name="use_password">使用密码</string>
    <string name="use_finger_print">使用指纹</string>
    <string name="open_basket">扫码上工</string>
    <string name="close_basket">扫码下工</string>
    <string name="password_error">密码错误！请重新输入</string>
    <!-- activity worker order -->
    <string name="order_title">历史工单</string>
    <string name="near_three_month">近3个月明细</string>
    <string name="order_filter">筛选</string>

    <!-- dialog -->
    <string name="dialog_cancel">取消</string>
    <string name="dialog_submit">确认</string>

    <!-- xiaomi push -->
    <string name="set_accept_time">设置时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="push_register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>

    <!-- 其它 -->
    <string name="searchNothing">抱歉，暂未查找到您需要的结果。</string>
    <string name="title_activity_woker_primary">WokerPrimaryActivity</string>
    <string name="title_activity_woker_primary_new">WokerPrimaryNewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
