<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWorkPhotosBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- 顶部导航栏 -->
    <include layout="@layout/toolbar_with_title_and_back"/>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                style="@style/more_common_linearlayout_style">
                <RelativeLayout
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/device_name"/>
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="50dp"
                        android:text="@string/device_number"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/device_rl_1"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/device_1"/>
                    <TextView
                        android:id="@+id/device_number_1"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/size_50"
                        android:text="134666"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/device_rl_2"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/device_2"/>
                    <TextView
                        android:id="@+id/device_number_2"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/size_50"
                        android:text="134667"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/device_rl_3"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/device_3"/>
                    <TextView
                        android:id="@+id/device_number_3"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/size_50"
                        android:text="134668"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/device_rl_4"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/device_4"/>
                    <TextView
                        android:id="@+id/device_number_4"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/size_50"
                        android:text="134669"/>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>